--- a/inventory/manager/index.html
+++ b/inventory/manager/index.html
@@ -23,7 +23,7 @@
             loadScript("../../inventory/manager/list_loadingdata.js");
             loadScript("../../inventory/manager/list_popup_add.js");
             loadScript("../../inventory/manager/list_popup_serch.js");
-            loadScript("../../UI/navBar.js");
+            // loadScript("../../UI/navBar.js");
             loadScript("../../inventory/manager/merge.js");
           })();
   
@@ -46,11 +46,12 @@
      popup_serch_div.Set_Visible(false);
      popup_add_div.Set_Visible(false);
 
+     
     </script>
 <div class="bottom_gm_nav_container">
   <div class="bottom_gm_nav_card_container">
     <div class="bottom_gm_nav_card">管理</div>
-    <div class="bottom_gm_nav_card">合併</div>
+    <!-- <div class="bottom_gm_nav_card">合併</div> -->
   </div>
 </div>
 <div class="under-line">
