--- a/pharmacy/consumption/main.html
+++ b/pharmacy/consumption/main.html
@@ -27,6 +27,7 @@
           loadScript("main_loadingdata.js");
           loadScript("main.js");
           loadScript("jsonFunc.js");
+          loadScript("../../UI/navBar.js");
         })();
 
   </script>
