--- a/pharmacy/controlleddrug/main.html
+++ b/pharmacy/controlleddrug/main.html
@@ -20,6 +20,7 @@
   <script src="main.js"></script>
   <script src="main_loadingdata.js"></script>
   <script src="main_popup_serch.js"></script>
+  <script src="../../UI/navBar.js"></script>
 
 </head>
 <body>
