--- a/inspection/index.html
+++ b/inspection/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no/>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
-  <title>盤點操作頁面</title>
+  <title>驗收操作頁面</title>
   <link rel="stylesheet" href="index.css">
   <link rel="icon" href="../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
@@ -15,7 +15,8 @@
   <script>
     (async function() 
         {
-          loadScript("../../api/map.js");
+          // loadScript("../../api/inspection.js");
+          // loadScript("../../api/map.js");
           loadScript("../../ApiURL.js");
           loadScript("../../ChatHub.js");
           loadScript("../../svg/mySVG.js");
@@ -32,6 +33,8 @@
           loadScript("popup_med_serch.js");
           loadScript("index.js");
           loadScript("jsonFunc.js");
+          loadScript("../../api/med_page.js");
+          loadScript("jsonFunc_inspection.js");
         })();
 
   </script>
