--- a/inventory/manager/index.html
+++ b/inventory/manager/index.html
@@ -51,7 +51,7 @@
 <div class="bottom_gm_nav_container">
   <div class="bottom_gm_nav_card_container">
     <div class="bottom_gm_nav_card">管理</div>
-    <div class="bottom_gm_nav_card">合併</div>
+    <!-- <div class="bottom_gm_nav_card">合併</div> -->
   </div>
 </div>
 <div class="under-line">
