--- a/login/index.html
+++ b/login/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="expires" content="0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../login.css">
     <title>次世代智慧藥局管理平台</title>
-    <script src="../../Function/Basic.js"></script>
+    <script src="../Function/Basic.js"></script>
 
-    <script src="ApiURL.js"></script>
-    <script src="login.js"></script>
-    <script src="session.js"></script>
+    <script src="../ApiURL.js"></script>
+    <script src="../login.js"></script>
+    <script src="../session.js"></script>
 
 </head>
 <body>
