Co-authored-by: LeonLu <LeonLu3303@users.noreply.github.com> Co-authored-by: lee_hsunkimo@yahoo.com.tw <lee_hsunkimo@yahoo.com.tw>

--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="authur" content="Leon Lu" />
-    <meta name="robots" content="index, follow" />
-    <meta name="description" content="" />
-    <title>鴻森整合機電有限公司</title>
-  </head>
-  <body>
-    <script>
-      window.addEventListener('load', () => {
-        window.location.href = './pages/homepage/';
-      });
-    </script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no/>">
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="expires" content="0">
+    <link rel="stylesheet" href="../login.css">
+    <title>次世代智慧藥局管理平台</title>
+    <script src="../Function/Basic.js"></script>
+
+    <script src="../ApiURL.js"></script>
+    <script src="../login.js"></script>
+    <script src="../session.js"></script>
+
+</head>
+<body>
+    <div class="container">
+        <form class="login-form" action="login.php" method="POST" onsubmit="return verifyUser(event)">
+            <h2>次世代智慧藥局整合平台</h2>
+            <input type="text" name="account" placeholder="使用者帳號">
+            <input type="password" name="password" placeholder="密碼">
+            <button type="submit" id="login-btn">登入</button>
+        </form>
+        </div>
+        <div class="under-line">
+            <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+          </div>
+</body>
 </html>
