--- a/inspection/index.html
+++ b/inspection/index.html
@@ -31,6 +31,7 @@
           loadScript("popup_login.js");
           loadScript("popup_creatSelect.js");
           loadScript("popup_med_serch.js");
+          loadScript("popup_select_by_pon.js");
           loadScript("index.js");
           loadScript("jsonFunc.js");
           loadScript("../../api/med_page.js");
