--- a/inventory/manager/index.html
+++ b/inventory/manager/index.html
@@ -23,6 +23,8 @@
             loadScript("../../inventory/manager/list_loadingdata.js");
             loadScript("../../inventory/manager/list_popup_add.js");
             loadScript("../../inventory/manager/list_popup_serch.js");
+            loadScript("../../inventory/manager/list_popup_upload.js");
+            loadScript("../../inventory/manager/list_popup_add_default_op.js");
             loadScript("../../UI/navBar.js");
             loadScript("../../inventory/manager/merge.js");
           })();
@@ -41,17 +43,23 @@
 
      get_popup_serch();
      get_popup_add();
+     get_popup_upload();
+      get_popup_add_OP();
+     popup_merge_add();
+     popup_merge_create();
      document.body.appendChild(popup_serch_div.div);
 
      popup_serch_div.Set_Visible(false);
      popup_add_div.Set_Visible(false);
+     popup_upload_div.Set_Visible(false);
+     popup_add_OP_div.Set_Visible(false);
 
      
     </script>
 <div class="bottom_gm_nav_container">
   <div class="bottom_gm_nav_card_container">
     <div class="bottom_gm_nav_card">管理</div>
-    <!-- <div class="bottom_gm_nav_card">合併</div> -->
+    <div class="bottom_gm_nav_card">合併</div>
   </div>
 </div>
 <div class="under-line">
