Co-authored-by: LeonLu <LeonLu3303@users.noreply.github.com>

--- a/inventory/index.html
+++ b/inventory/index.html
@@ -144,7 +144,7 @@
      {
         if(Header_state.textContent == StateType.等待條碼刷入)
         {
-            console.log("BarcodeKeyin" , "顯示藥品資料")
+            console.log("BarcodeKeyin" , "顯示藥品資料");
             serch_CODE_input_enter(parsedCode);
         }
       
