--- a/frontpage_new/index.html
+++ b/frontpage_new/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
   <script src="../../Function/Basic.js?v=1.0"></script>
   <script>
     (async function(){
@@ -27,9 +30,7 @@
 </head>
 <body>
     <div class="main_container">
-        <h1 class="content">
-            請選擇工作項目
-        </h1>
+      <div class="container"></div>
     </div>
     <div class="under-line">
         <B> Copyright ©2023 鴻森整合機電有限公司 </B>
