--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
 <body>
     <div class="container">
         <form class="login-form" action="login.php" method="POST" onsubmit="return verifyUser(event)">
+            <div class="form_login_icon">
+                <img src="../user.png" alt="">
+            </div>
+            <div class="form_background"></div>
             <h2>次世代智慧藥局整合平台</h2>
-            <input type="text" name="account" placeholder="使用者帳號">
-            <input type="password" name="password" placeholder="密碼">
-            <button type="submit" id="login-btn">登入</button>
+            <div class="input_container" style="margin-bottom: 20px;">
+                <label for="account">
+                    <img src="../user_little.png" alt="">
+                </label>
+                <input type="text" name="account" placeholder="account">
+            </div>
+            <div class="input_container">
+                <label for="password">
+                    <img src="../lock_icon.png" alt="">
+                </label>
+                <input type="password" name="password" placeholder="password">
+            </div>
+            <button type="submit" id="login-btn">LOGIN</button>
         </form>
-        </div>
-        <div class="under-line">
-            <B> Copyright ©2023 鴻森整合機電有限公司 </B>
-          </div>
+    </div>
+    <div class="under-line">
+        <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+    </div>
 </body>
 </html>
