--- a/controlleddrug/index.html
+++ b/controlleddrug/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>管制藥結存頁面</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="popup_pharmacy_select_style.css">
+  <link rel="stylesheet" href="popup_med_balance_form_style.css">
+  <link rel="stylesheet" href="popup_muilt_med_select.css">
   <script src="../../ApiURL.js"></script>
   <script src="../../ChatHub.js"></script>
   <script src="../../Function/WebApiFunc.js"></script>
@@ -15,34 +18,45 @@
   <script src="../../UI/map.js"></script>
   <script src="../../session_check.js"></script>
   <script src="../../session.js"></script>
+  <script src="../api/med_page.js"></script>
 
-  <script src="jsonFunc.js"></script>
+  <!-- <script src="jsonFunc.js"></script>
   <script src="main.js"></script>
   <script src="main_loadingdata.js"></script>
-  <script src="main_popup_serch.js"></script>
+  <script src="main_popup_serch.js"></script> -->
+  <script src="./app.js"></script>
+  <script src="./popup_pharmacy_select.js"></script>
+  <script src="./popup_datetime_select.js"></script>
+  <script src="./popup_med_balance_form.js"></script>
+  <script src="./popup_muilt_med_select.js"></script>
   <script src="../../UI/navBar.js"></script>
 
 </head>
 <body>
-  
       <script>
+          // document.body.style.position = 'absolute';
+          // const header_div = get_header();
+          // document.body.appendChild(header_div);
+          // const main_div = get_main();
+          // document.body.appendChild(main_div);    
+          // get_popup_serch();
+          // popup_serch_div.Set_Visible(false);
+          get_popup_pharmacy_select();
+          popup_pharmacy_select_div.Set_Visible(true);
 
-          
-          document.body.style.position = 'absolute';
-          const header_div = get_header();
-          document.body.appendChild(header_div);
-          const main_div = get_main();
-          document.body.appendChild(main_div);    
-          
-          get_popup_serch();
-          popup_serch_div.Set_Visible(false);
+          get_popup_datetime_select();
+          popup_datetime_select_div.Set_Visible(false);
+
+          popup_med_balance_form();
+          popup_med_balance_form_div.Set_Visible(false);
+
+          get_popup_muilt_med_select();
+          popup_muilt_med_select_div.Set_Visible(false);
       </script>
    
-
   <div class="under-line">
     <B> Copyright ©2023 鴻森整合機電有限公司 </B>
   </div>
-  
   <script>
   var barcode_value = '';
     // 監聽頁面的keydown事件
