--- a/controlleddrug/index.html
+++ b/controlleddrug/index.html
@@ -29,6 +29,7 @@
   <script src="./popup_datetime_select.js"></script>
   <script src="./popup_med_balance_form.js"></script>
   <script src="./popup_muilt_med_select.js"></script>
+  <script src="../api/transaction.js"></script>
   <script src="../../UI/navBar.js"></script>
 
 </head>
@@ -41,8 +42,6 @@
           // document.body.appendChild(main_div);    
           // get_popup_serch();
           // popup_serch_div.Set_Visible(false);
-          get_popup_pharmacy_select();
-          popup_pharmacy_select_div.Set_Visible(true);
 
           get_popup_datetime_select();
           popup_datetime_select_div.Set_Visible(false);
@@ -55,7 +54,7 @@
       </script>
    
   <div class="under-line">
-    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+    <B> Copyright ©2024 鴻森智能科技 </B>
   </div>
   <script>
   var barcode_value = '';
