--- a/inspection/departmentselect.html
+++ b/inspection/departmentselect.html
@@ -36,7 +36,7 @@
 
     </script>  
 <div class="under-line">
-  <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+  <B> Copyright ©2024 鴻森智能科技 </B>
 </div>
  
 </body>
