--- a/medGroup/index.html
+++ b/medGroup/index.html
@@ -21,6 +21,7 @@
     loadScript("../dist/JsBarcode.all.js");
     loadScript("../session_check.js");
     loadScript("../session.js");
+    loadScript("../../api/med_set.js");
     loadScript("./medGroup.js");
     loadScript("./medManager.js");
     loadScript("../UI/navBar.js");
@@ -43,7 +44,7 @@
     </div>
   </div>
   <div class="under-line">
-    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+    <B> Copyright ©2024 鴻森智能科技 </B>
   </div>
 </body>
 </html>
