--- a/med_balance/index.html
+++ b/med_balance/index.html
@@ -23,6 +23,7 @@
           loadScript("../../popup/map.js");    
           loadScript("../../dist/JsBarcode.all.js");
           loadScript("../../session_check.js");
+          loadScript("../../api/transaction.js");
           loadScript("../../session.js");
           loadScript("../../Function/WebApiFunc.js");
           loadScript("app.js");
@@ -44,9 +45,6 @@
           // document.body.appendChild(header_div);
           // const main_div = get_main();
           // document.body.appendChild(main_div);  
-          
-          get_popup_pharmacy_select();
-          popup_pharmacy_select_div.Set_Visible(true);
 
           // get_popup_search_select();
           // popup_search_select_div.Set_Visible(true);
@@ -57,7 +55,7 @@
       </script>
    
   <div class="under-line">
-    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+    <B> Copyright ©2024 鴻森智能科技 </B>
   </div>
   
   <script>
