--- a/for_display_demo_page/index.html
+++ b/for_display_demo_page/index.html
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="under-line">
-        <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+        <B> Copyright ©2024 鴻森智能科技 </B>
     </div>
 </body>
 </html>
