--- a/frontpage_new/index.html
+++ b/frontpage_new/index.html
@@ -33,7 +33,7 @@
       <div class="container"></div>
     </div>
     <div class="under-line">
-        <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+        <B> Copyright ©2024 鴻森智能科技 </B>
     </div>
 </body>
 </html>
