--- a/inventory/manager/index.html
+++ b/inventory/manager/index.html
@@ -43,6 +43,8 @@
      const main_div = get_main();
      document.body.appendChild(main_div);
 
+      let pp_input_select_index = -1;
+
      get_popup_serch();
      get_popup_add();
      get_popup_upload();
@@ -69,7 +71,7 @@
   </div>
 </div>
 <div class="under-line">
-  <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+  <B> Copyright ©2024 鴻森智能科技 </B>
 </div>
 <script>
 
