--- a/login.html.html
+++ b/login.html.html
@@ -25,7 +25,7 @@
         </form>
         </div>
         <div class="under-line">
-            <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+            <B> Copyright ©2024 鴻森智能科技 </B>
           </div>
 </body>
 </html>
