--- a/pharmacy/controlleddrug/main.html
+++ b/pharmacy/controlleddrug/main.html
@@ -40,7 +40,7 @@
    
 
   <div class="under-line">
-    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+    <B> Copyright ©2024 鴻森智能科技 </B>
   </div>
   
   <script>
