--- a/staff_management/index.html
+++ b/staff_management/index.html
@@ -30,6 +30,7 @@
           loadScript("../../session.js");
           loadScript("../../Function/WebApiFunc.js");
           loadScript("app.js");
+          loadScript("api.js");
           loadScript("popup_add_modify_staff.js");
           loadScript("popup_staff_level.js");
           // loadScript("popup_search.js");
@@ -40,19 +41,18 @@
   </script>
 </head>
 <body>
-  
       <script>
 
           get_popup_add_modify_staff();
           popup_add_modify_staff_div.Set_Visible(false);
 
           get_popup_staff_level();
-          popup_staff_level_div.Set_Visible(true);
+          popup_staff_level_div.Set_Visible(false);
 
       </script>
    
   <div class="under-line">
-    <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+    <B> Copyright ©2024 鴻森智能科技 </B>
   </div>
   
   <script>
