--- a/storehouse/inspection/index.html
+++ b/storehouse/inspection/index.html
@@ -48,7 +48,7 @@
      popup_upload_div.Set_Visible(false);
     </script>  
 <div class="under-line">
-  <B> Copyright ©2023 鴻森整合機電有限公司 </B>
+  <B> Copyright ©2024 鴻森智能科技 </B>
 </div>
 <script>
 
