新增關於、調整調劑台彈窗UI

--- a/web_version/index.html
+++ b/web_version/index.html
@@ -21,13 +21,11 @@
           loadScript("../../popup/map.js");    
           loadScript("../../dist/JsBarcode.all.js");
           loadScript("../../session_check.js");
+          loadScript("../../api/transaction.js");
           loadScript("../../session.js");
           loadScript("../../Function/WebApiFunc.js");
-          loadScript("data_select.js");
           loadScript("app.js");
-          loadScript("deliver.js");
-          loadScript("allocate.js");
-          loadScript("review.js");
+          loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
         })();
 
@@ -36,7 +34,6 @@
 <body>
   
       <script>
-
       </script>
    
   <div class="under-line">
