--- a/frontpage_new/index.html
+++ b/frontpage_new/index.html
@@ -24,16 +24,27 @@
     loadScript("../session_check.js");
     loadScript("../session.js");
     loadScript("../UI/navBar.js");
-    loadScript("./front_new.js")
+    loadScript("./front_new.js");
+    loadScript("./popup_info.js");
     })();
   </script>
 </head>
 <body>
+  <script>
+    
+    get_popup_info();
+    popup_info_div.Set_Visible(false);
+
+    
+  </script>
+
+
     <div class="main_container">
       <div class="container"></div>
     </div>
     <div class="under-line">
         <B> Copyright ©2024 鴻森智能科技 </B>
+        <div class="info_btn"><img src="../image/about/information.png" alt=""><span>關於</span></div>
     </div>
 </body>
 </html>
