Co-authored-by: LeonLu <LeonLu3303@users.noreply.github.com>

--- a/web_version/index.html
+++ b/web_version/index.html
@@ -32,7 +32,8 @@
   </script>
 </head>
 <body>
-  
+  <img src="../image/icon/medicine_colorful.png" alt="">
+  <img src="../image/icon/medicine_black.png" alt="">
       <script>
       </script>
    
