--- a/test.html
+++ b/test.html
@@ -30,4 +30,18 @@
             <B> Copyright ©2024 鴻森智能科技 </B>
           </div>
 </body>
+<script>
+    // let data = {
+    //     // api: ["person_page","add"]
+    //     api: "person_page/add",
+    //     // api: {
+    //     //     folder: "person_page",
+    //     //     name: "add"
+    //     // }
+    //     web_page: "staff_management",
+    //     op_GUID: "asdfasdfasd-asdfasdfa-asdfasdf",
+    //     date_time: "2024-05-29 00:00:00 0000"
+
+    // }
+</script>
 </html>
