--- a/ch_medical_order/index.html
+++ b/ch_medical_order/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no/>">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
   <title>次世代藥局管理系統</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="popup_pharmacy_select_style.css">
-  <link rel="stylesheet" href="popup_search.css">
+  <link rel="stylesheet" href="popup_content.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -28,7 +27,7 @@
           loadScript("../../Function/WebApiFunc.js");
           loadScript("app.js");
           // loadScript("popup_pharmacy_select.js");
-          // loadScript("popup_search.js");
+          loadScript("popup_content.js");
           loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
         })();
@@ -36,7 +35,6 @@
   </script>
 </head>
 <body>
-  
       <script>
 
           
@@ -46,8 +44,8 @@
           // const main_div = get_main();
           // document.body.appendChild(main_div);  
 
-          // get_popup_search_select();
-          // popup_search_select_div.Set_Visible(true);
+          get_popup_cht_med_content();
+          popup_cht_med_content_div.Set_Visible(true);
           
           // const popup_find_div = get_popup_serch();
           // document.body.appendChild(popup_find_div.div);
