--- a/ch_medical_order/index.html
+++ b/ch_medical_order/index.html
@@ -45,7 +45,7 @@
           // document.body.appendChild(main_div);  
 
           get_popup_cht_med_content();
-          popup_cht_med_content_div.Set_Visible(true);
+          popup_cht_med_content_div.Set_Visible(false);
           
           // const popup_find_div = get_popup_serch();
           // document.body.appendChild(popup_find_div.div);
