--- a/barcodemanagement/index.html
+++ b/barcodemanagement/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>條碼建置操作頁面</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
 
   <script src="../../Function/Basic.js?v=1.0"></script>
   <script>
