--- a/consumption/index.html
+++ b/consumption/index.html
@@ -9,6 +9,7 @@
   <title>藥品交易紀錄</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_pharmacy_select_style.css">
   <link rel="stylesheet" href="popup_search.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
