--- a/med_request/index.html
+++ b/med_request/index.html
@@ -9,6 +9,7 @@
   <title>藥品請領</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_search.css">
   <link rel="stylesheet" href="../../UI/popup_UI/med_storage/popup_storage.css">
   <link rel="stylesheet" href="popup_unit_content.css">
