--- a/staff_management/index.html
+++ b/staff_management/index.html
@@ -9,6 +9,7 @@
   <title>次世代藥局管理系統</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_add_modify_staff.css">
   <link rel="stylesheet" href="popup_staff_level.css">
   <!-- <link rel="stylesheet" href="popup_search.css"> -->
