--- a/ch_medical_order/index.html
+++ b/ch_medical_order/index.html
@@ -9,6 +9,7 @@
   <title>次世代藥局管理系統</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_content.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
 
