--- a/controlleddrug/index.html
+++ b/controlleddrug/index.html
@@ -5,58 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>管制藥結存頁面</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_pharmacy_select_style.css">
   <link rel="stylesheet" href="popup_med_balance_form_style.css">
   <link rel="stylesheet" href="popup_muilt_med_select.css">
-  <script src="../../ApiURL.js"></script>
+  <script src="../../Function/Basic.js?v=1.0"></script>
+  <!-- <script src="../../ApiURL.js"></script>
   <script src="../../ChatHub.js"></script>
   <script src="../../Function/WebApiFunc.js"></script>
   <script src="../../svg/mySVG.js"></script>
-  <script src="../../Function/Basic.js"></script>
-  <script src="../../popup/map.js"></script>
+  <script src="../Function/WebApiFunc.js"></script>
   <script src="../../dist/JsBarcode.all.js"></script>
   <script src="../../UI/map.js"></script>
   <script src="../../session_check.js"></script>
   <script src="../../session.js"></script>
   <script src="../api/med_page.js"></script>
-
-  <!-- <script src="jsonFunc.js"></script>
-  <script src="main.js"></script>
-  <script src="main_loadingdata.js"></script>
-  <script src="main_popup_serch.js"></script> -->
   <script src="./app.js"></script>
   <script src="./popup_pharmacy_select.js"></script>
   <script src="./popup_datetime_select.js"></script>
   <script src="./popup_med_balance_form.js"></script>
   <script src="./popup_muilt_med_select.js"></script>
   <script src="../api/transaction.js"></script>
-  <script src="../../UI/navBar.js"></script>
-
+  <script src="../../UI/navBar.js"></script> -->
 </head>
 <body>
       <script>
-          // document.body.style.position = 'absolute';
-          // const header_div = get_header();
-          // document.body.appendChild(header_div);
-          // const main_div = get_main();
-          // document.body.appendChild(main_div);    
-          // get_popup_serch();
-          // popup_serch_div.Set_Visible(false);
-
-          get_popup_datetime_select();
-          popup_datetime_select_div.Set_Visible(false);
-
-          popup_med_balance_form();
-          popup_med_balance_form_div.Set_Visible(false);
-
-          get_popup_muilt_med_select();
-          popup_muilt_med_select_div.Set_Visible(false);
+          (async function(){
+              loadScript("../api/map.js");
+              loadScript("../ApiURL.js");
+              loadScript("../ChatHub.js");
+              loadScript("../Function/WebApiFunc.js");
+              loadScript("../dist/JsBarcode.all.js");
+              loadScript("../UI/map.js");
+              loadScript("../svg/mySVG.js");
+              loadScript("../session_check.js");
+              loadScript("../session.js");
+              loadScript("../popup/map.js");
+              loadScript("../../UI/navBar.js");
+              // loadScript("../UI/navBar.js");
+              loadScript("../api/med_page.js");
+              loadScript("./app.js");
+              loadScript("./popup_pharmacy_select.js");
+              loadScript("./popup_med_balance_form.js");
+              loadScript("./popup_muilt_med_select.js");
+              loadScript("./popup_datetime_select.js");
+              loadScript("../api/transaction.js");
+          })();
       </script>
    
   <div class="under-line">
     <B> Copyright ©2024 鴻森智能科技 </B>
   </div>
   <script>
+
+  get_popup_datetime_select();
+  popup_datetime_select_div.Set_Visible(false);
+
+  popup_med_balance_form();
+  popup_med_balance_form_div.Set_Visible(false);
+
+  get_popup_muilt_med_select();
+  popup_muilt_med_select_div.Set_Visible(false);
+
   var barcode_value = '';
     // 監聽頁面的keydown事件
   window.addEventListener('keydown', function(event) 
