--- a/inspection/index.html
+++ b/inspection/index.html
@@ -8,6 +8,7 @@
   <meta http-equiv="expires" content="0">
   <title>驗收操作頁面</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="../../UI/popup_UI/med_storage/popup_storage.css">
   <link rel="icon" href="../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
