--- a/inventory/manager/index.html
+++ b/inventory/manager/index.html
@@ -6,6 +6,7 @@
     <title>盤點單管理</title>
     <link rel="stylesheet" href="../../inventory/manager/list.css">
     <link rel="stylesheet" href="../../inventory/manager/merge.css">
+    <link rel="stylesheet" href="../../UI/style/navBar.css">
     <script src="../../Function/Basic.js?v=1.0"></script>
     <script>
       (async function() 
