--- a/medGroup/index.html
+++ b/medGroup/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智慧藥局系統</title>
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="medGroup.css">
   <link rel="stylesheet" href="medManager.css">
   <link rel="icon" href="../../favicon.ico" >
