--- a/pickingpage/index.html
+++ b/pickingpage/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智慧藥局系統</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
