--- a/storehouse/inspection/index.html
+++ b/storehouse/inspection/index.html
@@ -6,6 +6,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <title>驗收單管理</title>
     <link rel="stylesheet" href="frontpage.css">
+    <link rel="stylesheet" href="../../UI/style/navBar.css">
     <script src="../../../../ApiURL.js"></script>
     <script src="../../../../ChatHub.js"></script>
     <script src="../../../../Function/WebApiFunc.js"></script>
