--- a/cht_consumption/index.html
+++ b/cht_consumption/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
-  <title>西藥藥品交易紀錄</title>
+  <title>中藥藥品交易紀錄</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
@@ -31,7 +31,7 @@
           // loadScript("main.js");
           loadScript("app.js");
           loadScript("../../api/transaction.js");
-          loadScript("popup_pharmacy_select.js");
+          // loadScript("popup_pharmacy_select.js");
           loadScript("popup_search.js");
           loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
