--- a/medicine_cart/index.html
+++ b/medicine_cart/index.html
@@ -11,9 +11,12 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="allocate.css">
+  <link rel="stylesheet" href="review.css">
   <link rel="stylesheet" href="popup_dc_new.css">
   <link rel="stylesheet" href="popup_bed_list.css">
   <link rel="stylesheet" href="popup_med_list.css">
+  <link rel="stylesheet" href="popup_med_list_search.css">
+  <link rel="stylesheet" href="popup_light_table_select.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -28,6 +31,7 @@
           loadScript("../../session_check.js");
           loadScript("../../session.js");
           loadScript("../../Function/WebApiFunc.js");
+          loadScript("../../api/med_cart_api.js");
           // loadScript("main_loadingdata.js");
           // loadScript("main_popup_serch.js");
           loadScript("popup_login.js");
@@ -40,6 +44,8 @@
           loadScript("popup_dc_new.js");
           loadScript("popup_bed_list.js");
           loadScript("popup_med_list.js");
+          loadScript("popup_med_list_search.js");
+          loadScript("popup_light_table_select.js");
         })();
 
   </script>
@@ -53,7 +59,13 @@
     popup_bed_list_div.Set_Visible(false);
 
     get_popup_med_list();
-    popup_med_list_div.Set_Visible(true);
+    popup_med_list_div.Set_Visible(false);
+
+    get_popup_med_list_search();
+    popup_med_list_search_div.Set_Visible(false);
+
+    get_popup_light_table_select();
+    popup_light_table_select_div.Set_Visible(false);
   </script>
 
   <div class="under-line">
