更新權限管控

--- a/barcodemanagement/index.html
+++ b/barcodemanagement/index.html
@@ -26,7 +26,7 @@
           loadScript("../../barcodemanagement/main_popup_input.js");
           loadScript("../../barcodemanagement/main_popup_serch.js");
           loadScript("../../barcodemanagement/jsonFunc.js");
-          
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
