--- a/ch_medical_order/index.html
+++ b/ch_medical_order/index.html
@@ -31,6 +31,7 @@
           loadScript("popup_content.js");
           loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
