--- a/controlleddrug/index.html
+++ b/controlleddrug/index.html
@@ -50,6 +50,7 @@
               loadScript("./popup_muilt_med_select.js");
               loadScript("./popup_datetime_select.js");
               loadScript("../api/transaction.js");
+              loadScript("../../api/web_permissions.js");
           })();
       </script>
    
