--- a/inspection/index.html
+++ b/inspection/index.html
@@ -39,6 +39,7 @@
           loadScript("jsonFunc.js");
           loadScript("../../api/med_page.js");
           loadScript("jsonFunc_inspection.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
