--- a/inspection/manager/index.html
+++ b/inspection/manager/index.html
@@ -26,6 +26,7 @@
             loadScript("../../inventory/manager/list_popup_serch.js");
             loadScript("../../UI/navBar.js");
             loadScript("../../inventory/manager/merge.js");
+            loadScript("../../api/web_permissions.js");
           })();
   
     </script>
