--- a/inventory/index.html
+++ b/inventory/index.html
@@ -33,6 +33,7 @@
           loadScript("popup_med_serch.js");
           loadScript("index.js");
           loadScript("jsonFunc.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
