--- a/inventory/manager/index.html
+++ b/inventory/manager/index.html
@@ -30,6 +30,7 @@
             loadScript("../../inventory/manager/list_popup_set_add_med.js");
             loadScript("../../UI/navBar.js");
             loadScript("../../inventory/manager/merge.js");
+            loadScript("../../api/web_permissions.js");
           })();
   
     </script>
