--- a/medGroup/index.html
+++ b/medGroup/index.html
@@ -27,6 +27,7 @@
     loadScript("./medManager.js");
     loadScript("../UI/navBar.js");
     loadScript("./popup_med_item.js");
+    loadScript("../../api/web_permissions.js");
     })();
   </script>
 </head>
