--- a/pickingpage/index.html
+++ b/pickingpage/index.html
@@ -23,6 +23,7 @@
     loadScript("../session.js");
     loadScript("./app.js");
     loadScript("../UI/navBar.js");
+    loadScript("../../api/web_permissions.js");
     })();
   </script>
 </head>
