--- a/staff_management/index.html
+++ b/staff_management/index.html
@@ -34,6 +34,7 @@
           // loadScript("popup_search.js");
           loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
