--- a/consumption/index.html
+++ b/consumption/index.html
@@ -35,6 +35,7 @@
           loadScript("popup_search.js");
           loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
