--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
   <title>智慧藥局系統</title>
-  <link rel="stylesheet" href="front_new.css">
+  <link rel="stylesheet" href="front_new.css?v=1.0">
   <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
@@ -23,6 +23,7 @@
     loadScript("../dist/JsBarcode.all.js");
     loadScript("../session_check.js");
     loadScript("../session.js");
+    loadScript("../../api/web_permissions.js");
     loadScript("../UI/nav_bar.js");
     // loadScript("../UI/navBar.js");
     loadScript("./front_new.js");
