--- a/med_balance/index.html
+++ b/med_balance/index.html
@@ -32,6 +32,7 @@
           // loadScript("popup_search.js");
           loadScript("jsonFunc.js");
           loadScript("../../UI/navBar.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
