--- a/storehouse/inspection/index.html
+++ b/storehouse/inspection/index.html
@@ -26,6 +26,7 @@
     <script src="frontpage_popup_add.js"></script>
     <script src="frontpage_popup_upload.js"></script>
     <script src="menu_popup.js"></script>
+    <script src="../../../../api/web_permissions.js"></script>
     
     
 </head>
