--- a/batch_storage/index.html
+++ b/batch_storage/index.html
@@ -9,6 +9,7 @@
   <title>批次入庫</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="popup_add.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
   <script>
@@ -26,6 +27,7 @@
           loadScript("../../api/med_page.js");
           loadScript("page_data.js");
           loadScript("app.js");
+          loadScript("popup_add.js");
           loadScript("../../UI/navBar.js");
           loadScript("../../api/transaction.js");
           loadScript("../../api/web_permissions.js");
@@ -36,18 +38,7 @@
 <body>
   
       <script>
-          // document.body.style.position = 'absolute';
-          // const header_div = get_header();
-          // document.body.appendChild(header_div);
-          // const main_div = get_main();
-          // document.body.appendChild(main_div);  
 
-          // get_popup_search_select();
-          // popup_search_select_div.Set_Visible(true);
-          
-          // const popup_find_div = get_popup_serch();
-          // document.body.appendChild(popup_find_div.div);
-          // popup_find_div.Set_Visible(false);
       </script>
    
   <div class="under-line">
@@ -58,13 +49,13 @@
   BarcodeKeyinEvent = BarcodeKeyin;
   async function BarcodeKeyin(parsedCode)
   {
-    let main_fast_search_input = document.querySelector(".main_fast_search_input");
-    if(document.activeElement == main_fast_search_input) return;
+    let ppadd_CODE_input = document.querySelector("#ppadd_CODE_input");
+    if(document.activeElement == ppadd_CODE_input) return;
 
     const response = await serch_by_BarCode(parsedCode ,medicine_page.Data);
     console.log("serch_by_BarCode",response)
     if(response.Data.length == 0) {
-        main_fast_search_input.value = ''
+        ppadd_CODE_input.value = ''
         return;
     }
 
@@ -83,22 +74,13 @@
 
     let code = response.Data[0].CODE;
 
-    console.log("barcode：" + main_fast_search_input.value);
+    console.log("barcode：" + ppadd_CODE_input.value);
     console.log("Barcode search result：" + code);
 
     if(code == undefined) return;
 
-    temp_search_condition.date = `${yyyy}-${mm}-${dd}`;
-    temp_search_condition.req_unit = "all";
-    temp_search_condition.type = "code";
-    temp_search_condition.content = code;
+    ppadd_CODE_input.value = code;
 
-    main_fast_search_input.value = "";
-
-    console.log(temp_search_condition);
-    set_list_result_and_filter();
-
-    main_fast_search_input.value = '';
   }
 
 // 解析帶有分隔符的字符串
