--- a/medicine_cart/index.html
+++ b/medicine_cart/index.html
@@ -32,6 +32,7 @@
           loadScript("../../session.js");
           loadScript("../../Function/WebApiFunc.js");
           loadScript("../../api/med_cart_api.js");
+          loadScript("../../api/web_permissions.js");
           // loadScript("main_loadingdata.js");
           // loadScript("main_popup_serch.js");
           loadScript("popup_login.js");
