--- a/medGroup/index.html
+++ b/medGroup/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智慧藥局系統</title>
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="medGroup.css">
-  <link rel="stylesheet" href="medManager.css">
+  <link rel="stylesheet" href="medGroup.css?v=1.0">
+  <link rel="stylesheet" href="medManager.css?v=1.0">
   <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
