單據辨識頁面上線

--- a/med_balance/index.html
+++ b/med_balance/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
-  <title>次世代藥局管理系統</title>
+  <title>庫存量清單</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
