--- a/requisitions_upload/index.html
+++ b/requisitions_upload/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
-  <title>次世代藥局管理系統</title>
+  <title>單據辨識</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
@@ -17,6 +17,7 @@
   <script>
     (async function() 
         {
+          loadScript("../../api/map.js");
           loadScript("../../ApiURL.js");
           loadScript("../../ChatHub.js");
           loadScript("../../svg/mySVG.js");
@@ -32,6 +33,7 @@
           loadScript("popup_result_confirm.js");
           loadScript("popup_code_compare.js");
           loadScript("../../UI/navBar.js");
+          loadScript("../../api/web_permissions.js");
         })();
 
   </script>
