--- a/inventory/index.html
+++ b/inventory/index.html
@@ -130,7 +130,9 @@
   function ChathubError()
   {
     // alert("連線斷開,重新整理");
-    location.reload()
+    // location.reload()
+    signalR_init(`${api_ip}chatHub`);
+    console.log("reconnect....");
   }
 
   BarcodeKeyinEvent = BarcodeKeyin;
