--- a/med_allocate/index.html
+++ b/med_allocate/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
-  <title>申領核撥</title>
+  <title>撥補核撥</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
@@ -27,7 +27,7 @@
           loadScript("../../session_check.js");
           loadScript("../../session.js");
           loadScript("../../Function/WebApiFunc.js");
-          loadScript("../../api/materialRequisition.js");
+          loadScript("../../api/drugStotreDistribution.js");
           loadScript("../../api/med_page.js");
           loadScript("page_data.js");
           loadScript("app.js");
