--- a/medicine_cart/index.html
+++ b/medicine_cart/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="popup_prescription_info.css">
   <link rel="stylesheet" href="popup_similar_drugs.css">
   <link rel="stylesheet" href="popup_physician_notes.css">
+  <link rel="stylesheet" href="popup_insurance_regulations.css">
   <script src="../../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -56,6 +57,7 @@
           loadScript("popup_med_pic.js");
           loadScript("popup_similar_drugs.js");
           loadScript("popup_physician_notes.js");
+          loadScript("popup_insurance_regulations.js");
         })();
 
   </script>
@@ -88,6 +90,9 @@
 
     get_popup_physician_notes();
     popup_physician_notes_div.Set_Visible(false);
+
+    get_popup_insurance_regulations();
+    popup_insurance_regulations_div.Set_Visible(false);
   </script>
 
   <div class="under-line">
